src/tests/snapshots/funky__tests__wasm__gcd.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 2,
                        ty: I32,
                    },
                ],
                code: [
                    OP_BLOCK(
                        Empty,
                        CodeBlock {
                            id: 3,
                            instructions: [
                                OP_LOCAL_GET(
                                    0,
                                ),
                                OP_LOCAL_GET(
                                    1,
                                ),
                                OP_I32_EQ,
                                OP_IF(
                                    Empty,
                                    CodeBlock {
                                        id: 1,
                                        instructions: [
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                            OP_LOCAL_SET(
                                                2,
                                            ),
                                            OP_BR(
                                                1,
                                            ),
                                        ],
                                    },
                                ),
                                OP_LOOP(
                                    Empty,
                                    CodeBlock {
                                        id: 2,
                                        instructions: [
                                            OP_LOCAL_GET(
                                                1,
                                            ),
                                            OP_I32_CONST(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                1,
                                            ),
                                            OP_I32_GT_U,
                                            OP_LOCAL_TEE(
                                                2,
                                            ),
                                            OP_SELECT,
                                            OP_LOCAL_SET(
                                                3,
                                            ),
                                            OP_LOCAL_GET(
                                                1,
                                            ),
                                            OP_I32_CONST(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                2,
                                            ),
                                            OP_SELECT,
                                            OP_I32_SUB,
                                            OP_LOCAL_TEE(
                                                2,
                                            ),
                                            OP_LOCAL_SET(
                                                1,
                                            ),
                                            OP_LOCAL_GET(
                                                2,
                                            ),
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                3,
                                            ),
                                            OP_I32_SUB,
                                            OP_LOCAL_TEE(
                                                0,
                                            ),
                                            OP_I32_NE,
                                            OP_BR_IF(
                                                0,
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        },
                    ),
                    OP_LOCAL_GET(
                        2,
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I32,
                    },
                ],
                code: [
                    OP_BLOCK(
                        Empty,
                        CodeBlock {
                            id: 6,
                            instructions: [
                                OP_LOCAL_GET(
                                    1,
                                ),
                                OP_I32_EQZ,
                                OP_IF(
                                    Empty,
                                    CodeBlock {
                                        id: 4,
                                        instructions: [
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                            OP_LOCAL_SET(
                                                2,
                                            ),
                                            OP_BR(
                                                1,
                                            ),
                                        ],
                                    },
                                ),
                                OP_LOOP(
                                    Empty,
                                    CodeBlock {
                                        id: 5,
                                        instructions: [
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                1,
                                            ),
                                            OP_LOCAL_TEE(
                                                2,
                                            ),
                                            OP_I32_REM_U,
                                            OP_LOCAL_SET(
                                                1,
                                            ),
                                            OP_LOCAL_GET(
                                                2,
                                            ),
                                            OP_LOCAL_SET(
                                                0,
                                            ),
                                            OP_LOCAL_GET(
                                                1,
                                            ),
                                            OP_BR_IF(
                                                0,
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        },
                    ),
                    OP_LOCAL_GET(
                        2,
                    ),
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            0,
            1,
        ],
        tableaddrs: [],
        memaddrs: [
            0,
        ],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "gcd",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "gcd_recursive",
                value: Function {
                    ty: 1,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 2,
                            ty: I32,
                        },
                    ],
                    code: [
                        OP_BLOCK(
                            Empty,
                            CodeBlock {
                                id: 3,
                                instructions: [
                                    OP_LOCAL_GET(
                                        0,
                                    ),
                                    OP_LOCAL_GET(
                                        1,
                                    ),
                                    OP_I32_EQ,
                                    OP_IF(
                                        Empty,
                                        CodeBlock {
                                            id: 1,
                                            instructions: [
                                                OP_LOCAL_GET(
                                                    0,
                                                ),
                                                OP_LOCAL_SET(
                                                    2,
                                                ),
                                                OP_BR(
                                                    1,
                                                ),
                                            ],
                                        },
                                    ),
                                    OP_LOOP(
                                        Empty,
                                        CodeBlock {
                                            id: 2,
                                            instructions: [
                                                OP_LOCAL_GET(
                                                    1,
                                                ),
                                                OP_I32_CONST(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    1,
                                                ),
                                                OP_I32_GT_U,
                                                OP_LOCAL_TEE(
                                                    2,
                                                ),
                                                OP_SELECT,
                                                OP_LOCAL_SET(
                                                    3,
                                                ),
                                                OP_LOCAL_GET(
                                                    1,
                                                ),
                                                OP_I32_CONST(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    2,
                                                ),
                                                OP_SELECT,
                                                OP_I32_SUB,
                                                OP_LOCAL_TEE(
                                                    2,
                                                ),
                                                OP_LOCAL_SET(
                                                    1,
                                                ),
                                                OP_LOCAL_GET(
                                                    2,
                                                ),
                                                OP_LOCAL_GET(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    3,
                                                ),
                                                OP_I32_SUB,
                                                OP_LOCAL_TEE(
                                                    0,
                                                ),
                                                OP_I32_NE,
                                                OP_BR_IF(
                                                    0,
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                            },
                        ),
                        OP_LOCAL_GET(
                            2,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        OP_BLOCK(
                            Empty,
                            CodeBlock {
                                id: 6,
                                instructions: [
                                    OP_LOCAL_GET(
                                        1,
                                    ),
                                    OP_I32_EQZ,
                                    OP_IF(
                                        Empty,
                                        CodeBlock {
                                            id: 4,
                                            instructions: [
                                                OP_LOCAL_GET(
                                                    0,
                                                ),
                                                OP_LOCAL_SET(
                                                    2,
                                                ),
                                                OP_BR(
                                                    1,
                                                ),
                                            ],
                                        },
                                    ),
                                    OP_LOOP(
                                        Empty,
                                        CodeBlock {
                                            id: 5,
                                            instructions: [
                                                OP_LOCAL_GET(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    1,
                                                ),
                                                OP_LOCAL_TEE(
                                                    2,
                                                ),
                                                OP_I32_REM_U,
                                                OP_LOCAL_SET(
                                                    1,
                                                ),
                                                OP_LOCAL_GET(
                                                    2,
                                                ),
                                                OP_LOCAL_SET(
                                                    0,
                                                ),
                                                OP_LOCAL_GET(
                                                    1,
                                                ),
                                                OP_BR_IF(
                                                    0,
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                            },
                        ),
                        OP_LOCAL_GET(
                            2,
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
