src/tests/snapshots/funky__tests__wasm__if_loop.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module_instance: ModuleInstance {
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
        ],
        table_addrs: [],
        mem_addrs: [
            MemoryAddr(
                0,
            ),
        ],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "my_loop",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        InstructionWrapper {
                            instruction_id: 7,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 8,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 9,
                            instruction: OP_I32_MUL,
                        },
                        InstructionWrapper {
                            instruction_id: 10,
                            instruction: OP_I32_CONST(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 11,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 12,
                            instruction: OP_SELECT,
                        },
                        InstructionWrapper {
                            instruction_id: 13,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 14,
                            instruction: OP_IF(
                                Empty,
                                CodeBlock {
                                    id: 2,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 6,
                                            instruction: OP_LOOP(
                                                Empty,
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        InstructionWrapper {
                                                            instruction_id: 1,
                                                            instruction: OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 2,
                                                            instruction: OP_I32_CONST(
                                                                -1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 3,
                                                            instruction: OP_I32_ADD,
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 4,
                                                            instruction: OP_LOCAL_TEE(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 5,
                                                            instruction: OP_BR_IF(
                                                                0,
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
